# xrest

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
docs/: types.yaml
docs/src/: index.md
public/: splashscreen.html
src/: App.vue  main.ts  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  environment.rs  history.rs  io.rs  lib.rs  main.rs  services.rs  swagger.rs  token_cache.rs  types.rs
src-tauri/src/domain/: environment.rs  mod.rs  settings.rs
src-tauri/src/domains/: mod.rs  settings.rs
src-tauri/src/domains/auth/: cache.rs  mod.rs  preflight.rs
src-tauri/src/domains/git/: mod.rs
src-tauri/src/domains/secrets/: mod.rs  secrets.rs
src-tauri/src/domains/service/: endpoint.rs  environment.rs  mod.rs  service.rs
src-tauri/src/tests/: behavioural.rs  mod.rs
src-tauri/src/tests/unit/: commands.rs  config.rs  domains_integration.rs  history.rs  mod.rs  services.rs
src/__tests__/: App.test.ts
src/components/: AddSecretDialog.vue  AppSidebar.vue  InterpolatedInput.vue  InterpolatedText.vue  InterpolatedTextarea.vue  JsonHighlighter.vue  RequestAuth.vue  RequestBody.vue  RequestHistory.vue  RequestParameters.vue  RequestUrlBar.vue  ResponseViewer.vue  ServiceSettingsView.vue  ServiceTree.vue  TestPreflightDialog.vue  XRestIcon.vue
src/composables/: useCodeGenerator.ts  useDialogState.ts  useEnvironmentVariables.ts  useGitIntegration.ts  useRequestExecution.ts  useServiceSettings.ts  useTabManager.ts
src/lib/: placeholders.ts  (+3 more)
tests/: petstore-openapi.json
(+128 files in other folders)
